--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ title                    : "Laser_Cho 의 창고"
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : "Laser Cho"
-description              : "An amazing website."
+description              : "Laser Cho 의 프로그래밍 저장소"
 url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
@@ -104,9 +104,9 @@ analytics:
 
 # Site Author
 author:
-  name             : "Your Name"
+  name             : "LAser Cho"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "I am an **amazing** person."
+  bio              : "South Korean"
   location         : "Somewhere"
   email            :
   links:
