--- a/_config.yml
+++ b/_config.yml
@@ -104,7 +104,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "LAser Cho"
+  name             : "Laser Cho"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "South Korean"
   location         : "Somewhere"
